part-1/html-page/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-html
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-html
  template:
    metadata:
      labels:
        app: simple-html
    spec:
      containers:
        - name: simple-html
          image: ipegii/kube-project:1.1.2
